feat: enhance copilot deployment configuration and validation
- Add INITIAL_CHATFLOW_ID environment variable for seeding chatflows to user accounts
- Improve copilot-auto-deploy.sh UX with flexible environment selection (accepts names or numbers)
- Reorder service selection menu to prioritize "both services" as default option
- Enhance create-env-files.js with comprehensive configuration validation system
- Add service-specific validation for required environment variables (flowise/web)
- Improve Auth0 configuration with automatic URL formatting and default audience
- Simplify deployment flow by removing complex choice prompts
- Switch web service healthcheck from /healthcheck to /api/auth/session endpoint

--- a/copilot/copilot.appName.env.template
+++ b/copilot/copilot.appName.env.template
@@ -15,13 +15,16 @@ APIKEY_STORAGE_TYPE=db
 # Enable Flagsmith 
 FLAGSMITH_ENVIRONMENT_ID=
 
-# Disabled by default, auto generated but can set but will invalidate the current API Keys in DB if
-# # FLOWISE_SECRETKEY_OVERWRITE=  
+# Encryption Key Override: Overrides the encryption key from SECRETKEY_PATH
+# WARNING: Changing this invalidates all existing encrypted credentials
+# FLOWISE_SECRETKEY_OVERWRITE=
 
 # Session Secret: Cryptographically secure secret for Express session cookies
 # Used for OAuth state management and session security - must remain consistent
 # Generate with: openssl rand -base64 64
 SESSION_SECRET=  # Required: Keep consistent across deployments
+
+FLOWISE_API_KEY=  # Required: Embed proxy server authentication key
 
 # ==================================================
 # AUTH0 CONFIGURATION
@@ -35,8 +38,8 @@ AUTH0_SCOPE="openid profile email"
 AUTH0_TOKEN_SIGN_ALG=RS256
 AUTH0_DOMAIN=
 AUTH0_ORGANIZATION_ID=
-AUTH0_CLIENT_ID=  # Optional: Only needed if using OAuth endpoints
-AUTH0_CLIENT_SECRET=  # Optional: Only needed if using OAuth endpoints
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
 
 # Auth0 Secret: Required for session management (not JWT validation)
 # Must match the web app's AUTH0_SECRET for session consistency
@@ -55,8 +58,12 @@ AUTH_DEBUG=false
 LOG_LEVEL=warn
 DEBUG_LOG_LEVEL=warn
 
-# Minimum Required OpenAI API Key
+# OpenAI API Key, required for AAI features
 AAI_DEFAULT_OPENAI_API_KEY=
+
+# Initial Chatflow UUID - Set to a specific chatflow UUID or comma-separated UUIDs to copy chatflows to all user accounts
+# Example: INITIAL_CHATFLOW_ID="UUID1,UUID2,UUID3"
+# INITIAL_CHATFLOW_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 
 # ==================================================
 # LANGFUSE CONFIGURATION
