chore: update Dockerfile and README for improved configuration and clarity
- Added build arguments for port configuration in Dockerfiles for both server and web applications, allowing dynamic port exposure.
- Updated the README to reflect changes in the database setup instructions, specifying the inclusion of Redis in the local setup process.

These updates enhance the deployment configuration and provide clearer guidance for developers during application setup.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -98,9 +98,12 @@ RUN chmod +x entrypoint.sh
 
 USER nextjs
 
-EXPOSE 3000
+# Build arguments for port configuration
+ARG PORT=3000
+ENV PORT=$PORT
 
-ENV PORT=3000
+EXPOSE $PORT
+
 ENV HOSTNAME="0.0.0.0"
 
 # Use Node.js entrypoint to parse DATABASE_SECRET, run migration, and start server
