--- a/copilot/flowise/manifest.yml
+++ b/copilot/flowise/manifest.yml
@@ -24,10 +24,6 @@ image:
     # Port exposed through your container to route traffic to it.
     port: 4000
 
-    # Container dependencies - Lacework sidecar is optional
-    depends_on:
-        datacollector-sidecar: start
-
 # Resource configuration moved to environment-specific overrides below
 exec: true # Enable running commands in your container.
 network:
@@ -54,7 +50,7 @@ sidecars:
 taskdef_overrides:
     # Override main container entrypoint to use Lacework sidecar script and then start the app
     - path: ContainerDefinitions[0].EntryPoint
-      value: ['/bin/sh', '-c', '/var/lib/lacework-backup/lacework-sidecar.sh && cd /app/packages/server && exec pnpm start']
+      value: ['/bin/sh', '-c', '(/var/lib/lacework-backup/lacework-sidecar.sh || true); cd /app/packages/server && exec pnpm start']
 
     # Add volume mount from sidecar to main container
     - path: ContainerDefinitions[0].VolumesFrom
