chore: add NUMBER_OF_PROXIES environment variable to Dockerfile
- Introduced a new environment variable `NUMBER_OF_PROXIES` in the Dockerfile to allow configuration of the number of proxies for the web application.
- This addition provides flexibility for deployment environments, enabling users to specify the desired number of proxies at runtime.

These updates enhance the Docker configuration by allowing for better management of proxy settings in various deployment scenarios.

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -104,6 +104,8 @@ ENV PORT=$PORT
 
 EXPOSE $PORT
 
+ENV NUMBER_OF_PROXIES="1"
+
 ENV HOSTNAME="0.0.0.0"
 
 # Use Node.js entrypoint to parse DATABASE_SECRET, run migration, and start server
