feat: implement comprehensive Unified Render deployment configuration
- Add complete render.yaml blueprint for multi-service deployment
- Configure unified naming convention (aai-unified1-web, aai-unified2-flowise, aai-unified3-database, aai-unified4-redis)
- Implement service-to-service communication using internal URLs
- Add database separation with flowise/web databases and SSL connections
- Configure Auth0 integration with variable substitution (CLIENT_DOMAIN, AUTH0_DOMAIN)
- Set up Redis with internal connection strings for both services
- Add production-safe debug defaults (LOG_LEVEL=warn, DEBUG=false, VERBOSE=false)
- Configure S3 storage with path-style access and proper defaults
- Add custom domain placeholders (api.subdomain.theanswer.ai, subdomain.theanswer.ai)
- Set region to virginia (US East) for better performance
- Remove overly permissive IP allowlists for security
- Add comprehensive environment variable defaults to minimize user prompts
- Configure health checks (/api/v1/ping for backend, /healthcheck for frontend)
- Add feature flag support (FLAGSMITH_ENVIRONMENT_ID)
- Remove legacy/migration variables for cleaner configuration
- Set AUTH0_SECRET generation instructions (openssl rand -hex 32)
- Configure CORS and iframe origins for development flexibility
- Add proper service discovery using fromService and fromDatabase references

--- a/copilot/copilot.appName.env.template
+++ b/copilot/copilot.appName.env.template
@@ -52,7 +52,7 @@ AUTH0_SECRET=  # Required: Same as web app for session management
 # # Debug settings (disable in production for security and performance)
 DEBUG=false
 VERBOSE=false
-AUTH_DEBUG=false
+AUTH0_DEBUG=false
 
 # Log levels: error, warn, info, debug (debug shows most detail)
 LOG_LEVEL=warn
