fix: update render.yaml for Redis connection property
- Changed the Redis service property from `internalConnectionString` to `connectionString` to align with updated configuration standards.
- This modification enhances clarity and consistency in the render.yaml file, ensuring proper service configuration for deployment.

--- a/render.yaml
+++ b/render.yaml
@@ -128,7 +128,7 @@ services:
             fromService:
                 name: aai-unified4-redis
                 type: redis
-                property: internalConnectionString
+                property: connectionString
           - key: AAI_DEFAULT_REDIS_URL
             fromService:
                 name: aai-unified4-redis
