fix: update render.yaml for environment variable configuration
- Commented out the Flowise Encryption Key Override to prevent accidental exposure of sensitive information.
- Changed the DEBUG_LEVEL property from `sync: false` to `value: 'warn'` for improved logging clarity during deployment.
- These modifications enhance the security and clarity of the render.yaml file, ensuring proper configuration for service deployment.

--- a/render.yaml
+++ b/render.yaml
@@ -104,8 +104,9 @@ services:
           # =========================================
           # Security & API Keys
           # =========================================
-          - key: FLOWISE_SECRETKEY_OVERWRITE
-            sync: false
+          # Flowise Encryption Key Override
+          # - key: FLOWISE_SECRETKEY_OVERWRITE
+          #   sync: false
           - key: SECRETKEY_PATH
             value: '/var/efs/'
           - key: APIKEY_STORAGE_TYPE
@@ -183,7 +184,7 @@ services:
           - key: TRIAL_PLAN_EXECUTIONS
             value: '10000'
           - key: DEBUG_LEVEL
-            sync: false
+            value: 'warn'
       region: virginia
       dockerContext: .
       dockerfilePath: ./Dockerfile
