fix: update render.yaml for Langfuse configuration
- Changed the LANGFUSE_HOST property from `sync: false` to `value: 'https://cloud.langfuse.com'` to ensure proper service connectivity.
- This modification enhances the configuration clarity and ensures that the Langfuse service is correctly set up for deployment.

--- a/render.yaml
+++ b/render.yaml
@@ -158,7 +158,7 @@ services:
           # Langfuse Tracing
           # =========================================
           - key: LANGFUSE_HOST
-            sync: false
+            value: 'https://cloud.langfuse.com'
           - key: LANGFUSE_PUBLIC_KEY
             sync: false
           - key: LANGFUSE_SECRET_KEY
