fix: update render.yaml for Auth0 domain configuration
- Changed the AUTH0_AUDIENCE property value from a dynamic placeholder to a hardcoded domain value of 'https://theanswer.ai'.
- This modification enhances the clarity of the render.yaml file by providing a specific domain for Auth0 integration, ensuring proper service configuration for deployment.

--- a/render.yaml
+++ b/render.yaml
@@ -79,7 +79,7 @@ services:
           - key: AUTH0_CLIENT_SECRET
             sync: false
           - key: AUTH0_AUDIENCE
-            value: https://${CLIENT_DOMAIN}
+            value: https://theanswer.ai
           - key: AUTH0_ISSUER_BASE_URL
             value: https://${AUTH0_DOMAIN}
           - key: AUTH0_ORGANIZATION_ID
