fix: update render.yaml to include start command for web server
- Added a startCommand property to the render.yaml file to specify the command for starting the web server (node apps/web/server.js).
- This change enhances the deployment configuration by ensuring the web server starts correctly, improving the overall service functionality.

--- a/render.yaml
+++ b/render.yaml
@@ -195,6 +195,7 @@ services:
       runtime: docker
       repo: https://github.com/the-answerai/theanswer
       plan: starter
+      startCommand: node apps/web/server.js
       envVars:
           # =========================================
           # Application Configuration
