--- a/render.yaml
+++ b/render.yaml
@@ -70,7 +70,6 @@ services:
             value: https://${CLIENT_DOMAIN}
           - key: AUTH0_SECRET
             sync: false
-
           - key: AUTH0_CLIENT_ID
             sync: false
           - key: AUTH0_CLIENT_SECRET
@@ -244,7 +243,7 @@ services:
           - key: AUTH0_BASE_URL
             value: https://${CLIENT_DOMAIN}
           - key: AUTH0_SECRET
-            value: '# Generate with: openssl rand -hex 32 - Web and Flowise should use the same secret'
+            sync: false
           - key: AUTH0_CLIENT_ID
             sync: false
           - key: AUTH0_CLIENT_SECRET
@@ -277,7 +276,6 @@ services:
             value: https://api.${CLIENT_DOMAIN}
           - key: ANSWERAI_DOMAIN
             value: https://${CLIENT_DOMAIN}
-
           - key: FLAGSMITH_ENVIRONMENT_ID
             sync: false
           - key: ANALYZE
